# wow_messages_c

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  todo.md
.github/workflows/: cmake-multi-platform.yml
TestUtils/: test_utils.c  test_utils.h
WowLoginMessages/: CMakeLists.txt
WowLoginMessages/include/wow_login_messages/: all.h  version2.h  version3.h  version5.h  version6.h  version7.h  version8.h  wow_login_messages.h
WowLoginMessages/src/: all.test.c  login.c  util.h  version2.test.c  version3.test.c  version5.test.c  version6.test.c  version7.test.c  version8.test.c
WowLoginMessagesC/: CMakeLists.txt
WowLoginMessagesC/include/wow_login_messages/: all.h  version2.h  version3.h  version5.h  version6.h  version7.h  version8.h  wow_login_messages.h
WowLoginMessagesC/src/: login.c  util.h
WowWorldMessages/: CMakeLists.txt
WowWorldMessages/include/wow_world_messages/: vanilla.h  wow_world_messages.h
WowWorldMessages/src/: util.c  util.h  vanilla.c  vanilla.test.c
WowWorldMessagesC/: CMakeLists.txt
WowWorldMessagesC/include/wow_world_messages/: all.h  vanilla.h  wow_world_messages.h
WowWorldMessagesC/src/: util.c  util.h  vanilla.c
examples/vanilla/: CMakeLists.txt
examples/vanilla/src/: server_socket.h  vanilla.main.c  vanilla.main.cpp
generator/: login_utils.py  main.py  print_achievement_done_array.py  print_achievement_in_progress_array.py  print_addon_array.py  print_aura_mask.py  print_cache_mask.py  print_enchant_mask.py  print_enum.py  print_inspect_talent_gear_mask.py  print_update_mask.py  util.py  writer.py
generator/print_struct/: __init__.py  print_members.py  print_read.py  print_size.py  print_tests.py  print_write.py  struct_util.py
test_utils/: test_utils.c  test_utils.h
wow_login_messages_c/include/wow_login_messages/: all.h  version2.h  version3.h  version5.h  version6.h  version7.h  version8.h  wow_login_messages.h
wow_login_messages_c/src/: all.test.c  login.c  util.h
wow_login_messages_cpp/: CMakeLists.txt
wow_login_messages_cpp/include/wow_login_messages_cpp/: all.hpp  version2.hpp  version3.hpp  version5.hpp  version6.hpp  version7.hpp  version8.hpp  wow_login_messages.hpp
wow_login_messages_cpp/src/: all.test.cpp  login.cpp  util.hpp
wow_world_messages_c/: CMakeLists.txt
wow_world_messages_c/include/wow_world_messages/: all.h  tbc.h  vanilla.h  wow_world_messages.h  wrath.h
wow_world_messages_c/src/: all.c  puff.c  tbc.c  tbc.test.c  util.c  util.h  vanilla.c  vanilla.test.c  wrath.c  wrath.test.c
wow_world_messages_cpp/: CMakeLists.txt
wow_world_messages_cpp/include/wow_world_messages_cpp/: all.hpp  tbc.hpp  vanilla.hpp  wow_world_messages.hpp  wrath.hpp
wow_world_messages_cpp/src/: all.cpp  puff.c  tbc.cpp  tbc.test.cpp  util.cpp  util.hpp  vanilla.cpp  vanilla.test.cpp  wrath.cpp  wrath.test.cpp
